refactor(schema): trim SchemaCatalog to minimal API
Drop speculative/legacy accessor methods, keeping only what consumers
(control validation, bot payload generation) actually need:
- remove getRawSchema(String) — leftover from the REST schemaBody-as-string
  model; consumers use JsonNode
- remove findSchema(Optional) — redundant with getSchema
- remove listRefs() — no consumer enumerates the catalog (commands come
  from device meta supportedCommands)
- remove the SchemaCatalog(ClassLoader) constructor — speculative

Public API is now: SchemaCatalog(), getDefault(), getSchema(commandId, version).
TASK-26010.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>